# NeuroScratch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
checkpoints/: mnist_from_scratch.npz
docs/: SPEC.md
neuroscratch/: __init__.py
neuroscratch/export/: __init__.py  __main__.py  parity.py  weights.py
neuroscratch/model/: __init__.py  activations.py  layers.py  loss.py  network.py  optimizer.py
neuroscratch/reference/: __init__.py  compare.py  model.py  train.py
neuroscratch/training/: __init__.py  data.py  gradient_check.py  train.py
reference/: metrics_reference.json
reports/: cross_validation.md
tests/: test_cross_validation.py  test_gradient_check.py  test_imports.py  test_model_primitives.py  test_parity.py
training/: metrics_reference.json
web/: app.js  index.html  inference.js  package.json  styles.css
web/parity/: fixtures.json  ood.test.mjs  parity.test.mjs
