[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroscratch"
version = "0.0.0"
description = "From-scratch NumPy neural network for MNIST with browser export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
reference = ["torch", "torchvision"]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools]
packages = ["neuroscratch", "neuroscratch.model", "neuroscratch.training", "neuroscratch.reference", "neuroscratch.export"]

[tool.ruff]
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B905"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
